# ukrainian-SFT-GRPO-pipeline

./: .gitignore  Dockerfile  README.md  REPORT.md  pyproject.toml
config/: GRPO_train.py  SFT_train.py  config.py  config.yaml  custom_metrics.py  dataset.py  early_stopping.py  grpo_train.py  lora.py  model.py  optimizer.py  quantization.py  reward_classifier.py  run.py
llm_summarize/: runner.py  utils.py
llm_summarize/SFT/: SFT.py  __init__.py  custom_sfttrainer.py
llm_summarize/alignment/: GRPO.py  __init__.py  custom_inference_callback.py  early_stopping_callbacks.py  reward_functions.py
llm_summarize/dataset_prep/: format_dataset.py
llm_summarize/utils/: peft_patches.py  utils.py
outputs/GRPO/: README.md
outputs/GRPO/final_best_model/: README.md  adapter_config.json  chat_template.jinja
outputs/SFT/: README.md
outputs/SFT/final_best_model/: README.md  adapter_config.json  tokenizer_config.json
scripts/: run_pipeline.py
